k8s/eureka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: distribuidas
spec:
  type: NodePort
  selector:
    app: eureka-server
  ports:
    - name: http
      port: 8761
      targetPort: 8761
      nodePort: 30861
